Added Github Links

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ h1.innerHTML= "Not all heroes wear capes, " + firstName;
       wingButton.addEventListener("click", flatsOnly);
     
     </script>
-    <h4>This page was coded by Robyn Hurt-Richardson, open sourced on Github, and hosted by Netlify</h4>
+    <h4>This page was coded by <a href="https://github.com/robynhrich">Robyn H Richardson</a>, open sourced on <a href="https://github.com/robynhrich/Buffalo-Wings-Landing-Page">Github</a>, and hosted by Netlify</h4>
   </body>
   </div>
 </html>
